--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-navigation>
+    <router-outlet></router-outlet>
+</app-navigation>
 
-<router-outlet></router-outlet>
