--- a/src/app/view-data/view-data.component.html
+++ b/src/app/view-data/view-data.component.html
@@ -1,12 +1,13 @@
 <div class="container-fluid">
-  <label>Search: </label> 
+  <label>Search:</label> 
   <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
-  <span><i class="material-icons"></i></span>
+  <span><i class="material-icons">search</i></span>
 </div>
 
 <div class="container-fluid">
+  <mat-card class="mat-card">
     <table mat-table [dataSource]="dataSource" class="table table-hover table-striped" matSort>
 
         <!--- Note that these columns can be defined in any order.
@@ -14,55 +15,123 @@
       
         <!-- cluster Column -->
         <ng-container matColumnDef="Cluster">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Cluster </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> 
+            CLUSTER <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="clusterFilter">
+          </mat-form-field>
+        </th>
           <td mat-cell *matCellDef="let element"> {{element.Cluster}} </td>
         </ng-container>
-      
+        
+        <!-- website Column -->
+        <ng-container matColumnDef="Application">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> APP_URL
+              <br>
+              <mat-form-field class="filter" floatLabel="never">
+                <mat-label>Search</mat-label>
+                <input matInput [formControl]="applicationFilter">
+              </mat-form-field>
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.Application }} </td>
+        </ng-container>
+
+        <!-- alias Column -->
+        <ng-container matColumnDef="Alias">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ALIAS|DNS|DNS_OUTPUT 
+              <br>
+              <mat-form-field class="filter" floatLabel="never">
+                <mat-label>Search</mat-label>
+                <input matInput [formControl]="aliasFilter">
+              </mat-form-field>
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.Alias}} </td>
+        </ng-container>
+
+        <!-- DNS Column -->
+        <ng-container matColumnDef="DNS">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> APP_URL|DNS|DNS_OUTPUT 
+              <br>
+              <mat-form-field class="filter" floatLabel="never">
+                <mat-label>Search</mat-label>
+                <input matInput [formControl]="dnsFilter">
+              </mat-form-field>
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.DNS}} </td>
+        </ng-container>
+
+        <!-- DocRoot Column -->
+        <ng-container matColumnDef="DocRoot">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> DOC_ROOT </th>
+          <td mat-cell *matCellDef="let element"> {{element.DocRoot}} </td>
+        </ng-container>
+
         <!-- servers Column -->
         <ng-container matColumnDef="Servers">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Server List </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> SERVER_LIST </th>
           <td mat-cell *matCellDef="let element"> {{element.Servers}} </td>
         </ng-container>
       
-        <!-- website Column -->
-        <ng-container matColumnDef="Application">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Application/Website Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.Application }} </td>
+        <!-- Category Column -->
+        <ng-container matColumnDef="Category">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> CATEGORY </th>
+          <td mat-cell *matCellDef="let element"> {{element.Category}} </td>
+        </ng-container>
+
+        <!-- ApacheVersion Column -->
+        <ng-container matColumnDef="ApacheVersion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> APACHE VERSION </th>
+          <td mat-cell *matCellDef="let element"> {{element.ApacheVersion}} </td>
+        </ng-container>
+
+        <!-- Context Column -->
+        <ng-container matColumnDef="Context">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> CONTEXT|TOMCAT_VERSION|JDK_VERSION </th>
+          <td mat-cell *matCellDef="let element"> {{element.Context}} </td>
         </ng-container>
       
-        <!-- alias Column -->
-        <ng-container matColumnDef="Alias">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Alias </th>
-          <td mat-cell *matCellDef="let element"> {{element.Alias}} </td>
-        </ng-container>
-      
-        <!-- DNS Column -->
-        <ng-container matColumnDef="DNS">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> DNS </th>
-            <td mat-cell *matCellDef="let element"> {{element.DNS}} </td>
+        <!-- OS Column -->
+        <ng-container matColumnDef="OS">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> OS DETAILS </th>
+          <td mat-cell *matCellDef="let element"> {{element.OS}} </td>
         </ng-container>
 
         <!-- Traffic Column -->
         <ng-container matColumnDef="Traffic">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Traffic </th>
-            <td mat-cell *matCellDef="let element"> {{element.Traffic}} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> HIT COUNT</th>
+          <td mat-cell *matCellDef="let element"> {{element.Traffic}} </td>
         </ng-container>
 
-        <!-- Category Column -->
-        <ng-container matColumnDef="Category">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-            <td mat-cell *matCellDef="let element"> {{element.Category}} </td>
+        <!-- LastDeployed Column -->
+        <ng-container matColumnDef="LastDeployed">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> LAST DEPLOYED </th>
+          <td mat-cell *matCellDef="let element"> {{element.LastDeployed}} </td>
         </ng-container>
 
-        <!-- Decission Column -->
-        <ng-container matColumnDef="Decission">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Decission </th>
-            <td mat-cell *matCellDef="let element"> {{element.Decission}} </td>
+        <!-- FileSize Column -->
+        <ng-container matColumnDef="FileSize">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> FILE SIZE </th>
+          <td mat-cell *matCellDef="let element"> {{element.FileSize}} </td>
+        </ng-container>
+      
+        
+
+        <!-- FIleExtersion Column -->
+        <ng-container matColumnDef="FIleExtersion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> FILE EXTENSION </th>
+            <td mat-cell *matCellDef="let element"> {{element.FIleExtersion}} </td>
+        </ng-container>
+
+        <!-- SSL Column -->
+        <ng-container matColumnDef="SSL">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> URL|SSL </th>
+            <td mat-cell *matCellDef="let element"> {{element.SSL}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns" class="thead-dark"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
-      
+    </mat-card>
 </div>
-<mat-paginator [pageSizeOptions]="[100, 500 ,1000, 20000]" showFirstLastButtons></mat-paginator>
+<mat-paginator [pageSizeOptions]="[10,100, 500 ,1000, 20000]" showFirstLastButtons></mat-paginator>
