--- a/src/app/view-data/view-data.component.html
+++ b/src/app/view-data/view-data.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <label>Search:</label> 
-  <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  <mat-form-field class="filter" floatLabel="never">
+      <input matInput [formControl]="generalFilter"  placeholder="Filter">
   </mat-form-field>
   <span><i class="material-icons">search</i></span>
 </div>
@@ -63,55 +63,109 @@
 
         <!-- DocRoot Column -->
         <ng-container matColumnDef="DocRoot">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> DOC_ROOT </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> DOC_ROOT 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="docrootFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.DocRoot}} </td>
         </ng-container>
 
         <!-- servers Column -->
         <ng-container matColumnDef="Servers">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> SERVER_LIST </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> SERVER_LIST 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="serverFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.Servers}} </td>
         </ng-container>
       
         <!-- Category Column -->
         <ng-container matColumnDef="Category">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> CATEGORY </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> CATEGORY 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="categoryFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.Category}} </td>
         </ng-container>
 
         <!-- ApacheVersion Column -->
         <ng-container matColumnDef="ApacheVersion">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> APACHE VERSION </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> APACHE VERSION 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="apacheFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.ApacheVersion}} </td>
         </ng-container>
 
         <!-- Context Column -->
         <ng-container matColumnDef="Context">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> CONTEXT|TOMCAT_VERSION|JDK_VERSION </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> CONTEXT|TOMCAT_VERSION|JDK_VERSION 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="contextFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.Context}} </td>
         </ng-container>
       
         <!-- OS Column -->
         <ng-container matColumnDef="OS">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> OS DETAILS </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> OS DETAILS 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="osFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.OS}} </td>
         </ng-container>
 
         <!-- Traffic Column -->
         <ng-container matColumnDef="Traffic">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> HIT COUNT</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> HIT COUNT
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="trafficFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.Traffic}} </td>
         </ng-container>
 
         <!-- LastDeployed Column -->
         <ng-container matColumnDef="LastDeployed">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> LAST DEPLOYED </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> LAST DEPLOYED 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="lastFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.LastDeployed}} </td>
         </ng-container>
 
         <!-- FileSize Column -->
         <ng-container matColumnDef="FileSize">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> FILE SIZE </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> FILE SIZE 
+          <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="sizeFilter">
+          </mat-form-field>
+          </th>
           <td mat-cell *matCellDef="let element"> {{element.FileSize}} </td>
         </ng-container>
       
@@ -119,13 +173,25 @@
 
         <!-- FIleExtersion Column -->
         <ng-container matColumnDef="FIleExtersion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> FILE EXTENSION </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> FILE EXTENSION 
+            <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="extFilter">
+          </mat-form-field>
+          </th>
             <td mat-cell *matCellDef="let element"> {{element.FIleExtersion}} </td>
         </ng-container>
 
         <!-- SSL Column -->
         <ng-container matColumnDef="SSL">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> URL|SSL </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> URL|SSL 
+            <br>
+          <mat-form-field class="filter" floatLabel="never">
+            <mat-label>Search</mat-label>
+            <input matInput [formControl]="sslFilter">
+          </mat-form-field>
+          </th>
             <td mat-cell *matCellDef="let element"> {{element.SSL}} </td>
         </ng-container>
 
