Dashboard details added

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,8 +5,9 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/data">Complete Data</a>
-      <a mat-list-item routerLink="/">Overview</a>
+      <a mat-list-item routerLink="/data">Data View 1</a>
+      <a mat-list-item routerLink="/datadisplay">Data View 2</a>
+      <a mat-list-item routerLink="/dashboard">Overview</a>
       <a mat-list-item routerLink="/convertJSON">JSON Data</a>
     </mat-nav-list>
   </mat-sidenav>
