--- a/src/app/view-data/view-data.component.html
+++ b/src/app/view-data/view-data.component.html
@@ -8,7 +8,8 @@
 
 <div class="container-fluid">
   <mat-card class="mat-card">
-    <table mat-table [dataSource]="dataSource" class="table table-hover table-striped" matSort>
+    <table mat-table [dataSource]="dataSource" class="table table-hover table-responsive table-striped" 
+      matSort>
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
