--- a/src/app/google-chart/dashboard/dashboard.component.html
+++ b/src/app/google-chart/dashboard/dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="grid-container">
   <h1 class="mat-h1">Dashboard</h1>
-  <mat-grid-list cols="2" rowHeight="450px">
+  <mat-grid-list cols="2" rowHeight="350px">
     <!--CARD 1-->
     <mat-grid-tile [colspan]="2" [rowspan]="1">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
             <!---{{option.title}}-->
-            Card 1
+            Complete Overview
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
               <mat-icon>more_vert</mat-icon>
             </button>
@@ -25,14 +25,15 @@
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
-
+  </mat-grid-list>
     <!--CARD 2-->
+    <mat-grid-list cols="2" rowHeight="550px">
     <mat-grid-tile [colspan]="1" [rowspan]="1">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
             <!---{{option.title}}-->
-            Category
+            Category Overview
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
               <mat-icon>more_vert</mat-icon>
             </button>
@@ -51,37 +52,12 @@
     </mat-grid-tile>
 
     <!--CARD 3-->
-    <mat-grid-tile [colspan]="1" [rowspan]="2">
-      <mat-card class="dashboard-card">
-        <mat-card-header>
-          <mat-card-title>
-            <!---{{option.title}}-->
-            Card 3
-            <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item>Expand</button>
-              <button mat-menu-item>Remove</button>
-            </mat-menu>
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content">
-          <div>
-            <!--Content here-->
-            Chart details 3
-          </div>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-
-    <!--CARD 4-->
     <mat-grid-tile [colspan]="1" [rowspan]="1">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
             <!---{{option.title}}-->
-            Card 4
+            Decission Overview
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
               <mat-icon>more_vert</mat-icon>
             </button>
@@ -94,7 +70,32 @@
         <mat-card-content class="dashboard-card-content">
           <div>
             <!--Content here-->
-            Chart details 4
+            <app-barchart></app-barchart>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+    <mat-grid-list cols="2" rowHeight="700px">
+    <!--CARD 4-->
+    <mat-grid-tile [colspan]="2" [rowspan]="1">
+      <mat-card class="dashboard-card">
+        <mat-card-header>
+          <mat-card-title>
+            <!---{{option.title}}-->
+            Cluster Overview
+            <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu" xPosition="before">
+              <button mat-menu-item>Expand</button>
+              <button mat-menu-item>Remove</button>
+            </mat-menu>
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="dashboard-card-content">
+          <div>
+            <app-chart></app-chart>
           </div>
         </mat-card-content>
       </mat-card>
