--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -13,57 +13,8 @@
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
   </ng-container>
 
-  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="example-element-description">
-          <table class="table table-hover table-responsive">
-                  <tr>
-                    <th >DOC ROOT</th>
-                    <td >{{element.DocRoot}}</td>
-                    <th >SERVERS</th>
-                    <td >{{element.Servers}}</td>
-                  </tr>
-                  <tr>
-                    <th >CONTEXT</th>
-                    <td  colspan="3">{{element.Context}}</td>
-                  </tr>
-                  <tr>
-                    <th >APACHE</th>
-                    <td >{{element.ApacheVersion}}</td>
-                    <th >OS</th>
-                    <td >{{element.OS}}</td>
-                  </tr>
-                  <tr>
-                      <th >LAST DEPLOYED</th>
-                      <td >{{element.Traffic}}</td>
-                      <th >HIT COUNT</th>
-                      <td >{{element.LastDeployed}}</td>
-                  </tr>
-                  <tr>
-                      <th >FILE SIZE</th>
-                      <td >{{element.FileSize}}</td>
-                      <th >FILE EXTENSION</th>
-                      <td >{{element.FIleExtersion}}</td>
-                  </tr>
-                  <tr>
-                    <th  >SSL</th>
-                    <td  colspan="3">{{element.SSL}}</td>
-                  </tr>
-                </table>
-          <span class="example-element-description-attribution"> --Details</span>
-        </div>
-      </div>
-    </td>
-  </ng-container>
-
   <tr mat-header-row *matHeaderRowDef="displayedColumns"  class="thead-dark"></tr>
   <tr mat-row *matRowDef="let element; columns: displayedColumns;"
-      class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      (click)="expandedElement = expandedElement === element ? null : element">
+      class="example-element-row">
   </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
