--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -6,8 +6,9 @@
   width: 200px;
 }
 
-.sidenav .mat-toolbar {
-  background: inherit;
+.mat-nav-list a{
+  font-family: Myriad Pro;
+  font-size: 18px;
 }
 
 .mat-toolbar.mat-primary {
