--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,7 +3,7 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar id="menu">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/data">Data View 1</a>
       <a mat-list-item routerLink="/datadisplay">Data View 2</a>
